2006-12-29 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>

	* CamelliaTransform.cs, CamelliaTransformLE.cs, CamelliaTransformBE.cs:
	r1846での変更を取消し、r1845に戻した

2006-12-29 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>

	* CamelliaTransform.cs: 削除
	* CamelliaTransformLE.cs, CamelliaTransformBE.cs: 基底クラスのコードを展開

2006-12-29 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>

	* CamelliaTransform.cs, CamelliaTransformLB.cs, CamelliaTransformBE.cs:
	基底クラスに統合したコードを分離。ビッグエンディアン用のコードを修正

2006-12-28 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>

	* CamelliaTransform.cs: EncryptBlock, DecryptBlock中の演算の順序を変更

2006-12-28 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>

	* CamelliaTransform.cs: ちょびっと整理

2006-12-28 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>

	* CamelliaTransform.cs:
	* CamelliaTransformLE.cs:
	* CamelliaTransformBE.cs: 共通部分を基底クラスに統合

2006-12-28 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>

	* CamelliaTransformBE.cs: LE版と同程度に最適化

2006-12-28 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>

	* CamelliaTransform.cs, CamelliaTransformLE.cs: CBCモード用処理を削除

2006-12-26 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>

	* CamelliaManaged.cs: 実装タイプの初期値を設定

2006-12-26 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>

	* CamelliaManaged.cs: 指定された実装タイプを保持しているか確認するメソッドを実装

2006-12-25 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>

	* CamelliaTransform.cs:
	* CamelliaTransform64LE.cs: 基底クラスのコンストラクタインターフェイス変更に対応

2006-12-10  Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>

	* CamelliaTransformLE.cs:
	* CamelliaTransform64LE.cs:
	* CamelliaTransformBE.cs: Camellia.NETのrev.38のバグ修正パッチを適用
