@@ -31,34 +31,12 @@ namespace openCrypto
 	/// </summary>
 	internal sealed class CamelliaTransformBE : CamelliaTransform
 	{
-		public CamelliaTransformBE (SymmetricAlgorithmPlus algo, byte[] rgbKey, byte[] rgbIV, bool encrypt)
+		public unsafe CamelliaTransformBE (SymmetricAlgorithmPlus algo, byte[] rgbKey, byte[] rgbIV, bool encrypt)
 			: base (algo, encrypt, rgbKey.Length == 16 ? 2 : 3, rgbIV, SBOX1_1110, SBOX2_0222, SBOX3_3033, SBOX4_4404)
 		{
-			GenerateKeyTable (rgbKey, _keyTable);
-		}
-
-		static uint RightRotate8 (uint value)
-		{
-			return (value >> 8) | (value << 24);
-		}
-
-		static uint LeftRotate1 (uint value)
-		{
-			return (value << 1) | (value >> 31);
-		}
-
-		static unsafe void memcpy4 (uint* dst, uint* src, int n)
-		{
-			for (int i = 0; i < n; i++)
-				dst[i] = src[i];
-		}
-
-		static unsafe void XorBlock (uint* x, uint* y, uint* z)
-		{
-			z[0] = x[0] ^ y[0];
-			z[1] = x[1] ^ y[1];
-			z[2] = x[2] ^ y[2];
-			z[3] = x[3] ^ y[3];
+			fixed (byte* pKey = rgbKey) {
+				GenerateKeyTable ((uint*)pKey, rgbKey.Length, _keyTable);
+			}
 		}
 
 		static unsafe void RotBlock (uint* x, int n, uint* y)
@@ -72,69 +50,78 @@ namespace openCrypto
 			y[1] = (x[idx1] << r) | (x[idx2] >> (32 - r));
 		}
 
-		static unsafe void Feistel (uint* x, uint* k, int key_offset)
+		static unsafe void GenerateKeyTable (uint* pKey, int keyLen, uint[] keyTable)
 		{
-			uint s1 = x[0] ^ k[0];
-			uint U = SBOX4_4404[(byte)s1] ^ SBOX3_3033[(byte)(s1 >> 8)] ^ SBOX2_0222[(byte)(s1 >> 16)] ^ SBOX1_1110[(byte)(s1 >> 24)];
-			uint s2 = x[1] ^ k[1];
-			uint D = SBOX1_1110[(byte)s2] ^ SBOX4_4404[(byte)(s2 >> 8)] ^ SBOX3_3033[(byte)(s2 >> 16)] ^ SBOX2_0222[(byte)(s2 >> 24)];
-
-			x[2] ^= D ^ U;
-			x[3] ^= D ^ U ^ RightRotate8 (U);
-
-			s1 = x[2] ^ k[key_offset];
-			U = SBOX4_4404[(byte)s1] ^ SBOX3_3033[(byte)(s1 >> 8)] ^ SBOX2_0222[(byte)(s1 >> 16)] ^ SBOX1_1110[(byte)(s1 >> 24)];
-			s2 = x[3] ^ k[key_offset + 1];
-			D = SBOX1_1110[(byte)s2] ^ SBOX4_4404[(byte)(s2 >> 8)] ^ SBOX3_3033[(byte)(s2 >> 16)] ^ SBOX2_0222[(byte)(s2 >> 24)];
-
-			x[0] ^= D ^ U;
-			x[1] ^= D ^ U ^ RightRotate8 (U);
-		}
-
-		static unsafe void GenerateKeyTable (byte[] rawKey, uint[] keyTable)
-		{
+			uint s1, s2, U, D;
 			uint* t = stackalloc uint[16];
-			fixed (uint* pTable = keyTable, pSIGMA = SIGMA)
-			fixed (byte* pKey = rawKey) {
-				switch (rawKey.Length) {
+			fixed (uint* pTable = keyTable) {
+				switch (keyLen) {
 				case 16: /* 128bit */
-					memcpy4 (t, (uint*)pKey, 4);
+					t[0] = pKey[0]; t[1] = pKey[1];
+					t[2] = pKey[2]; t[3] = pKey[3];
 					t[4] = t[5] = t[6] = t[7] = 0;
 					break;
 				case 24: /* 192bit */
-					memcpy4 (t, (uint*)pKey, 4);
-					for (int i = 4; i < 6; i++) {
-						uint tmp = (uint)((rawKey[4 * i] << 24) | (rawKey[4 * i + 1] << 16) |
-							(rawKey[4 * i + 2] << 8) | (rawKey[4 * i + 3] << 0));
-						t[i] = tmp;
-						t[i + 2] = ~tmp;
-					}
+					t[0] = pKey[0]; t[1] = pKey[1];
+					t[2] = pKey[2]; t[3] = pKey[3];
+					t[4] = pKey[4]; t[5] = pKey[5];
+					t[6] = ~t[4]; t[7] = ~t[5];
 					break;
 				case 32: /* 256bit */
-					memcpy4 (t, (uint*)pKey, 8);
+					t[0] = pKey[0]; t[1] = pKey[1];
+					t[2] = pKey[2]; t[3] = pKey[3];
+					t[4] = pKey[4]; t[5] = pKey[5];
+					t[6] = pKey[6]; t[7] = pKey[7];
 					break;
 				default:
 					throw new NotSupportedException ();
 				}
 
-				XorBlock (t, t + 4, t + 8);
-				Feistel (t + 8, pSIGMA, 2);
-				XorBlock (t + 8, t, t + 8);
-				Feistel (t + 8, pSIGMA + 4, 2);
+				t[8]  = t[0] ^ t[4]; t[9]  = t[1] ^ t[5];
+				t[10] = t[2] ^ t[6]; t[11] = t[3] ^ t[7];
+				s1 = t[8] ^ 0xa09e667f; s2 = t[9] ^ 0x3bcc908b;
+				U = SBOX4_4404[(byte)s1] ^ SBOX3_3033[(byte)(s1 >> 8)] ^ SBOX2_0222[(byte)(s1 >> 16)] ^ SBOX1_1110[(byte)(s1 >> 24)];
+				D = SBOX1_1110[(byte)s2] ^ SBOX4_4404[(byte)(s2 >> 8)] ^ SBOX3_3033[(byte)(s2 >> 16)] ^ SBOX2_0222[(byte)(s2 >> 24)];
+				t[10] ^= D ^ U; t[11] ^= D ^ U ^ ((U >> 8) | (U << 24));
+				s1 = t[10] ^ 0xb67ae858; s2 = t[11] ^ 0x4caa73b2;
+				U = SBOX4_4404[(byte)s1] ^ SBOX3_3033[(byte)(s1 >> 8)] ^ SBOX2_0222[(byte)(s1 >> 16)] ^ SBOX1_1110[(byte)(s1 >> 24)];
+				D = SBOX1_1110[(byte)s2] ^ SBOX4_4404[(byte)(s2 >> 8)] ^ SBOX3_3033[(byte)(s2 >> 16)] ^ SBOX2_0222[(byte)(s2 >> 24)];
+				t[8] ^= D ^ U; t[9] ^= D ^ U ^ ((U >> 8) | (U << 24));
+
+				t[8]  ^= t[0]; t[9]  ^= t[1];
+				t[10] ^= t[2]; t[11] ^= t[3];
+				s1 = t[8] ^ 0xc6ef372f; s2 = t[9] ^ 0xe94f82be;
+				U = SBOX4_4404[(byte)s1] ^ SBOX3_3033[(byte)(s1 >> 8)] ^ SBOX2_0222[(byte)(s1 >> 16)] ^ SBOX1_1110[(byte)(s1 >> 24)];
+				D = SBOX1_1110[(byte)s2] ^ SBOX4_4404[(byte)(s2 >> 8)] ^ SBOX3_3033[(byte)(s2 >> 16)] ^ SBOX2_0222[(byte)(s2 >> 24)];
+				t[10] ^= D ^ U; t[11] ^= D ^ U ^ ((U >> 8) | (U << 24));
+				s1 = t[10] ^ 0x54ff53a5; s2 = t[11] ^ 0xf1d36f1c;
+				U = SBOX4_4404[(byte)s1] ^ SBOX3_3033[(byte)(s1 >> 8)] ^ SBOX2_0222[(byte)(s1 >> 16)] ^ SBOX1_1110[(byte)(s1 >> 24)];
+				D = SBOX1_1110[(byte)s2] ^ SBOX4_4404[(byte)(s2 >> 8)] ^ SBOX3_3033[(byte)(s2 >> 16)] ^ SBOX2_0222[(byte)(s2 >> 24)];
+				t[8] ^= D ^ U; t[9] ^= D ^ U ^ ((U >> 8) | (U << 24));
 
 				/* Fill the keyTable. Requires many block rotations. */
-				if (rawKey.Length == 16) {
-					memcpy4 (pTable, t, 4);
-					memcpy4 (pTable + 4, t + 8, 4);
+				if (keyLen == 16) {
+					pTable[0] = t[0]; pTable[1] = t[1];
+					pTable[2] = t[2]; pTable[3] = t[3];
+					pTable[4] = t[8]; pTable[5] = t[9];
+					pTable[6] = t[10];pTable[7] = t[11];
 					for (int i = 4; i < 26; i += 2) {
 						RotBlock (t + KIDX1[i + 0], KSFT1[i + 0], pTable + i * 2);
 						RotBlock (t + KIDX1[i + 1], KSFT1[i + 1], pTable + i * 2 + 2);
 					}
 				} else {
-					XorBlock (t + 8, t + 4, t + 12);
-					Feistel (t + 12, pSIGMA + 8, 2);
-					memcpy4 (pTable, t, 4);
-					memcpy4 (pTable + 4, t + 12, 4);
+					t[12] = t[8] ^ t[4]; t[13] = t[9] ^ t[5];
+					t[14] = t[10] ^ t[6];t[15] = t[11] ^ t[7];
+					s1 = t[12] ^ 0x10e527fa; s2 = t[13] ^ 0xde682d1d;
+					U = SBOX4_4404[(byte)s1] ^ SBOX3_3033[(byte)(s1 >> 8)] ^ SBOX2_0222[(byte)(s1 >> 16)] ^ SBOX1_1110[(byte)(s1 >> 24)];
+					D = SBOX1_1110[(byte)s2] ^ SBOX4_4404[(byte)(s2 >> 8)] ^ SBOX3_3033[(byte)(s2 >> 16)] ^ SBOX2_0222[(byte)(s2 >> 24)];
+					t[14] ^= D ^ U; t[15] ^= D ^ U ^ ((U >> 8) | (U << 24));
+					s1 = t[14] ^ 0xb05688c2; s2 = t[15] ^ 0xb3e6c1fd;
+					U = SBOX4_4404[(byte)s1] ^ SBOX3_3033[(byte)(s1 >> 8)] ^ SBOX2_0222[(byte)(s1 >> 16)] ^ SBOX1_1110[(byte)(s1 >> 24)];
+					D = SBOX1_1110[(byte)s2] ^ SBOX4_4404[(byte)(s2 >> 8)] ^ SBOX3_3033[(byte)(s2 >> 16)] ^ SBOX2_0222[(byte)(s2 >> 24)];
+					t[12] ^= D ^ U; t[13] ^= D ^ U ^ ((U >> 8) | (U << 24));
+					pTable[0] = t[0]; pTable[1] = t[1]; pTable[2] = t[2]; pTable[3] = t[3];
+					pTable[4] = t[12];pTable[5] = t[13];pTable[6] = t[14];pTable[7] = t[15];
 					for (int i = 4; i < 34; i += 2) {
 						RotBlock (t + KIDX2[i + 0], KSFT2[i + 0], (uint*)(pTable + i * 2));
 						RotBlock (t + KIDX2[i + 1], KSFT2[i + 1], (uint*)(pTable + i * 2 + 2));
@@ -195,10 +182,12 @@ namespace openCrypto
 				if (i == _flayerLimit) break;
 				
 				k += 16;
-				x1 ^= LeftRotate1 (x0 & k[0]);
+				U = x0 & k[0];
+				x1 ^= (U << 1) | (U >> 31);
 				x0 ^= x1 | k[1];
 				x2 ^= x3 | k[3];
-				x3 ^= LeftRotate1 (x2 & k[2]);
+				U = x2 & k[2];
+				x3 ^= (U << 1) | (U >> 31);
 			}
 			
 			ciphertext[0] = k[16] ^ x2;
@@ -259,10 +248,12 @@ namespace openCrypto
 				
 				if (i == _flayerLimit) break;
 				k -= 16;
-				x1 ^= LeftRotate1 (x0 & k[4]);
+				U = x0 & k[4];
+				x1 ^= (U << 1) | (U >> 31);
 				x0 ^= x1 | k[5];
 				x2 ^= x3 | k[3];
-				x3 ^= LeftRotate1 (x2 & k[2]);
+				U = x2 & k[2];
+				x3 ^= (U << 1) | (U >> 31);
 			}
 			
 			plaintext[0] = k[-14] ^ x2;
@@ -455,15 +446,6 @@ namespace openCrypto
 			0x20002020, 0x14001414, 0xe900e9e9, 0xbd00bdbd, 0xdd00dddd, 0xe400e4e4, 
 			0xa100a1a1, 0xe000e0e0, 0x8a008a8a, 0xf100f1f1, 0xd600d6d6, 0x7a007a7a, 
 			0xbb00bbbb, 0xe300e3e3, 0x40004040, 0x4f004f4f
-		};
-		static uint[] SIGMA =
-		{
-			0xa09e667f, 0x3bcc908b,
-			0xb67ae858, 0x4caa73b2,
-			0xc6ef372f, 0xe94f82be,
-			0x54ff53a5, 0xf1d36f1c,
-			0x10e527fa, 0xde682d1d,
-			0xb05688c2, 0xb3e6c1fd
 		};
 
 		static int[] KSFT1 =
